@@ -22,7 +22,7 @@ SUBDIRS = . devel mpn mpz mpq mpf rand misc cxx
 
 include ../mpn/Makeasm.am
 
-INCLUDES = -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_srcdir)
 LDADD = libtests.la $(top_builddir)/libgmp.la
 
 check_LTLIBRARIES = libtests.la
